--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,14 @@
     <string name="register">Go To Register</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="user_name">User Name</string>
+    <string name="user_name">Username</string>
+    <string name="hint_user_name">username</string>
     <string name="password">Password</string>
+    <string name="hint_password">password</string>
+    <string name="action_forgot_password"><u>Forgot password?</u></string>
+    <string name="action_login">Log in</string>
+    <string name="action_signup">Sign up</string>
+    <string name="hint_no_account">Don\'t have an account?</string>
+    <string name="authentication_username_error">Invalid username.</string>
+    <string name="authentication_password_error">Invalid password.</string>
 </resources>
